--- a/.env
+++ b/.env
@@ -17,3 +17,13 @@
 APP_ENV=dev
 APP_SECRET=6ebbb1813fa389116cc17c9304ed29ab
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="mysqli://root:pass1234@127.0.0.1:3307/contacts_database"
+#DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+###< doctrine/doctrine-bundle ###
